import different first page header/footer from doc

When a Word section has a different first page header/footer,
this used to be imported into LO as a chain of two page styles.
Now that LO supports a single page style with different first page
header/footer we can import to that.

This change also incidentally fixes fdo#57908.
bnc#654230 had the same underlying problem, so the workaround committed
for that (which includes comments expressing lack of understanding)
has been removed.

Reviewed-on: https://gerrit.libreoffice.org/2065
Reviewed-by: Tor Lillqvist <tml@iki.fi>
Tested-by: Tor Lillqvist <tml@iki.fi>
Signed-off-by: Luboš Luňák <l.lunak@suse.cz>

Conflicts:
	sw/source/filter/ww8/wrtw8sty.cxx

Change-Id: I6df7e9abc8f2a327a3b33e06322ca943f6f24605